[package]
name = "device-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
chrono = "0.4.31"
tokio = { version = "1", features = ["full"] }
clap = {version = "4", features = ["derive"]}
serde_json = "1"
serde = { version = "1.0.193", features = ["derive"] }
axum = "0.7.1"
env_logger = "0"
log = "0.4.20"
